# mahjong

./: .gitignore  Cargo.toml  LICENSE
assets/mesh/: table.gltf  tile.gltf
assets/scenes/levels/pre_made/: square.scn  turtle.scn
assets/shaders/: tile.wgsl
src/: camera.rs  clamped_value.rs  colors.rs  editor.rs  grid.rs  main.rs  menu.rs  player.rs  plugins.rs  solitaire.rs  table.rs  tiles.rs  ui.rs  wall.rs
src/plugins/: assets.rs  editor.rs  menu.rs
src/plugins/assets/: background.rs  fonts.rs  tiles.rs
src/plugins/assets/tiles/: asset.rs  bonus.rs  honor.rs  suit.rs  tile.rs
src/solitaire/: editor.rs  grid.rs  play.rs
src/solitaire/editor/: tools.rs
src/solitaire/editor/tools/: place_tool.rs  select_tool.rs
