[package]
name = "mahjong"
version = "0.1.0"
authors = ["Julian Viechter <jviechter@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[dependencies.bevy]
version = "0.5.0"
features = ["dynamic"]

[dependencies]
bevy_mod_picking = "0.4.0"
bevy_egui = "0.6.0"
rand = "0.8.4"
itertools = "0.10.1"
futures-lite = "1.12.0"
