[package]
name = "mahjong"
version = "0.1.0"
authors = ["Julian Viechter <jviechter@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy_asset_loader = "0.14.1"
bevy_mod_raycast = "0.7.0"
bevy-inspector-egui = "0.17.0"
